trello-logic end

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -35,6 +35,7 @@
                 font-size: 22px;
             }
             .newBorderName {
+                display: none;
                 width: 280px;
                 font-size: 22px;    
                 color: white;
