--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -3,7 +3,7 @@
     .header__container {
         width: 1200px;
         text-align: center;
-        .homeBtn {
+        .TrelloJS {
             width: 300px;
             height: 50px;
             background-color: $home-bg-color;
@@ -15,7 +15,7 @@
             margin-top: 20px;
             transition: 0.2s ease-in-out;
         }
-        .homeBtn:hover {
+        .TrelloJS:hover {
             font-size: 24px;
             width: 340px;
             height: 60px;
