--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -20,10 +20,33 @@
                 transition: 0.1s ease-in-out;
                 margin-right: 50px;
                 margin-bottom: 50px;
+                .newTask{
+                    
+                    border-radius: 6px;
+                    margin-top: 5px;
+                    font-size: 18px;
+                    margin-bottom: 15px;
+                }
+                
             }
-            .newPlan:hover {
-                width: 320px;
-                height: 55px;
+            .task {
+                width: 300px;
+                height: 50px;
+                background-color: white;
+                border-radius: 6px;
+                margin-top: 10px;
+                margin-bottom: 5px;
+                position: relative;
+                .delet{
+                    position: absolute;
+                    right: 2px;
+                    bottom: 10px;
+                }
+                .complet {
+                    position: absolute;
+                    right: 2px;
+                    bottom: 30px;
+                }
             }
             .newBorder{
                 width: 300px;
@@ -69,4 +92,7 @@
                 }
             }
         }
+    }
+    .line-through{
+        text-decoration: line-through;
     }
